<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_fusion_pkg</name>
  <version>0.0.0</version>
  <description>Fusion of GPS, IMU, and encoder data using EKF</description>
  <maintainer email="juwon@todo.todo">juwon</maintainer>
  <license>MIT</license>

  <!-- 테스트용 의존성 (안 써도 됨) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- 실행 시 필요한 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
